# rs-clip-bridge

./: .gitignore  .release-plz.toml  Cargo.toml  README.md  build-server-docker-and-publish.sh  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: auto-compile-and-release.yaml  auto-compile.yaml  binaries-release.yaml  ci-test-coverage.yaml  continuous-verification.yaml  docker-publish.yaml  docker-release.yaml  release-test-codecov.yaml  release.yml
crates/rs-clip-bridge-client/: CHANGELOG.md  Cargo.toml  README.md
crates/rs-clip-bridge-client/src/: cli.rs  config.rs  crypto.rs  main.rs  monitor.rs  sender.rs  state.rs  types.rs
crates/rs-clip-bridge-server/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
crates/rs-clip-bridge-server/src/: cli.rs  clipboard.rs  config.rs  main.rs  types.rs
crates/rs-clip-bridge-server/src/namespaces/: main.rs
crates/rs-clip-bridge-server/src/namespaces/main/: handlers.rs  internals.rs  mod.rs
crates/rs-clip-bridge-types/: CHANGELOG.md  Cargo.toml  README.md
crates/rs-clip-bridge-types/src/: lib.rs
scripts/: build-x86_64-pc-windows-msvc.cmd
scripts/lib/: common.sh
scripts/libs/: common.sh
