[workspace]
members = [
  "crates/*",
]

resolver = "3"

[workspace.package]
authors = ["kiki-kanri"]
categories = []
description = ""
edition = "2024"
homepage = "https://github.com/kiki-kanri/rs-clip-bridge"
keywords = []
license = "MIT"
repository = "https://github.com/kiki-kanri/rs-clip-bridge"

# The profile that 'dist' will build with
[profile.dist]
codegen-units = 1
lto = "fat"
overflow-checks = true
panic = "unwind"
strip = "symbols"
