[workspace]
members = [
  "crates/*",
]

resolver = "3"

[workspace.package]
authors = ["kiki-kanri"]
categories = []
description = "A blazingly fast, cross-platform clipboard synchronizer using WebSockets with end-to-end ChaCha20-Poly1305 encryption. Sync clipboard content across multiple devices in real-time."
edition = "2024"
homepage = "https://github.com/kiki-kanri/rs-clip-bridge"
keywords = [
  "clipboard bridge",
  "clipboard sharing",
  "clipboard sync",
  "multi-device sync",
  "real-time clipboard",
]

license = "MIT"
repository = "https://github.com/kiki-kanri/rs-clip-bridge"

# Profiles
[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"
