[package]
name = "rs-clip-bridge-client"
version = "0.1.5"

authors.workspace = true
categories.workspace = true
description = "Cross-platform clipboard sync client for rs-clip-bridge. Monitors local clipboard changes and synchronizes them with a remote server via WebSockets. All clipboard data is encrypted using ChaCha20-Poly1305."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Dependencies
[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
clipboard-master = "4.0.0"
confique = { version = "0.4.0", features = ["toml"] }
hex = "0.4.3"
kikiutils = { version = "0.7.2", features = ["signal", "task", "tracing"] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"], default-features = false }
rand = "0.10.0"
rustls = { version = "0.23.37", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wsio-client = { version = "0.8.4", features = ["packet-codec-postcard"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

# Features
[features]
## Define features
rustls-aws-lc-rs = [
  "rustls/aws-lc-rs",
  "wsio-client/tls-rustls-webpki",
]

rustls-ring = [
  "rustls/ring",
  "wsio-client/tls-rustls-webpki",
]

## Default and alias
default = ["rustls-ring"]
all = ["rustls-ring"]
full = ["all"]
