[package]
name = "rs-clip-bridge-server"
version = "0.1.6"

authors.workspace = true
categories.workspace = true
description = "WebSocket server for rs-clip-bridge clipboard synchronization. Relays encrypted clipboard events between clients within the same channel."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Dependencies
[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
confique = { version = "0.4.0", features = ["toml"] }
kikiutils = { version = "0.7.3", features = ["signal", "task", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wsio-server = { version = "0.12.2", features = ["connection-extensions", "tower", "packet-codec-postcard"] }

# Features
[features]
## Define features

## Default and alias
default = []
all = []
full = ["all"]
